<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">How I Use It</string>
    
    <!-- PROPERTIES -->
    <string name="title_general">Today\'s device use</string>
    <string name="time_on_1">spent time</string>
    <string name="times_on_1">time/s used it</string>
	<string name="pending_info">(&#8230;wait&#8230;)</string>
	
	<!-- ACTIONS -->
	<string name="action_settings">Settings</string>
	<string name="action_about">About</string>

    <!-- FRASES COMODIN -->
	<string name="title_riseearly">Seems like you did rise early today</string>

	<!-- WIDGET -->
	<string name="widget_button_all_statistics">Previous Days</string>

	<!-- STATISTICS -->
	<string name="statistics_title">Statistics</string>
	<string name="statistics_row_day">Day&#160;</string>
	<string name="statistics_row_time">Spent time with device:&#160;</string>
	<string name="statistics_row_times">Times you used the device:&#160;</string>
	<string name="statistics_month_prompt">[Select a month&#8230;]</string>
	<string name="statistics_year_prompt">[Select a year&#8230;]</string>
	
	<!-- SETTINGS -->
	<string name="settings">Settings</string>
	<string name="settings_title">Settings</string>
	<string name="settings_notifications">Device use notification</string>
	<string name="settings_notifications_on">Use notifications are ON</string>
	<string name="settings_notifications_off">Use notifications are OFF</string>

	<!-- ABOUT -->
	<string name="about_text">Nowadays our mobile phone has become an inseparable fellow. We dedicate much time to it, time we borrow from other stuff. Many times we are not conscious it is a priority over many things. This app just want to put the info in a visible spot to let you know the way you use the phone. From that point each one has to make some use rules and habits to take benefit instead of becoming a problem. If there is not any problem with it, then I hope the app could be of help in other way. Contact: howiuseit.app@gmail.com</string>
	<string name="about_market_button">Please, let us know</string>
	<string name="about_ok_button">OK</string>
	
	<!-- NOTIFICATIONS -->
	<string name="notification_title">Today\'s phone use</string>
	<string name="notification_message_hours">&#160;hour/s of use</string>
	
	<!-- MONTHS -->
	<string name="month_january">January</string>
	<string name="month_february">February</string>
	<string name="month_march">March</string>
	<string name="month_april">April</string>
	<string name="month_may">May</string>
	<string name="month_june">June</string>
	<string name="month_july">July</string>
	<string name="month_august">August</string>
	<string name="month_september">September</string>
	<string name="month_october">October</string>
	<string name="month_november">November</string>
	<string name="month_december">December</string>
	
	<!-- MAIN VIEW -->
	<string name="main_use_title">Overall phone use</string>
	<string name="main_apps_title">Apps</string>
	<string name="main_time">Spent time</string>
	<string name="main_times">Times</string>
	<string name="main_days">Days</string>
	<string name="main_uninstalled">Uninstalled\napp</string>
	
	<!-- OTHERS -->
	<string name="others_hours">hours</string>
	<string name="others_minutes">minutes</string>
	<string name="others_seconds">seconds</string>
	
	<!-- RECORDS -->
	<string name="record_time_title">Record using the device!</string>
	<string name="record_time_text"><![CDATA[What a day! You\'ve been <b>]]></string>
	<string name="record_time_text2"><![CDATA[</b> hands on it!]]></string>
	<string name="record_uses_title">Record using the device!</string>
	<string name="record_uses_text"><![CDATA[You did take the phone <b>]]></string>
	<string name="record_uses_text2"><![CDATA[</b> times today! Choppy day uh?!]]></string>
	
	<!-- CONFIGURATION (NOT NECESSARY TO LOCALIZE) -->
	<string name="sett_notifications" translatable="false">sett_notifications</string>
	<string name="sett_installation_day" translatable="false">sett_installation_day</string>
	
</resources>
